# brlcad

./: .cvsignore  .gitattributes  .gitignore  .gitmodules  AUTHORS  Acknowledgements  BUGS  CHANGES  CHANGES.adoc  CMakeLists.txt  CONTRIBUTING.md  COPYING  COPYRIGHT  CTestConfig.cmake  Cakefile  Cakefile.defs  Cakefile.lib  Cakefile.prog  Cakefile.rules  ChangeLog  Copyright_1989_US_Army  Copyright_1991_US_Army  Copyright_1994_US_Army  Copyright_1995_US_Army  Copyright_2000_US_Army  Copyright_2001_US_Army  Copyright_2002_US_Army  Doxyfile  FactsHandler.cpp  FactsHandler.h  HACKING  HACKING.cmake  HISTORY  IFPainter.cpp  IFPainter.h  INSTALL  INSTALL.cmake  INSTALL.pmac  ISSUES.adoc  InformationGatherer.cpp  (+64 more)
bench/: .gitignore  CMakeLists.txt  Cakefile  Makefile.am  benchmark.1  benchmark.c  benchmark.cpp  clean.c  clean.cpp  compute.c  compute.cpp  lgt.sh  perf.sh  pixcmp.1  pixcmp.c  pretty.sh  recheck.sh  run.c  run.cpp  run.sh  try.sh  viewdiff.sh
burst/: Cakefile  Hm.c  Hm.h  HmGetc.c  HmGlob.c  Makefile.am  Mm.h  Sc.c  Sc.h  Tc.c  Tc.h  ascii.h  burst.c  burst.format  burst.h  error.c  extern.h  fb.c  glob.c  grid.c  gridrotate.c  idents.c  paint.c  plot.c  prnt.c  trie.c  trie.h  ui.c  vecmath.h
bwish/: Cakefile  Makefile.am  bwish.c  cmd.c  input.c  main.c  tcl.c  vers.c
conv/: Cakefile  Makefile.am  asc-nmg.1  asc-nmg.c  asc2g.c  asc2pix.c  bot-bldxf.c  bot_shell-vtk.1  bot_shell-vtk.c  botprint.c  conv-vg2g.1  conv-vg2g.c  cy-g.1  cy-g.c  dbclean.1  dbclean.sh  dbupgrade.c  dxf-g.1  dxf-g.c  enf-g.1  enf-g.c  euclid-g.1  euclid-g.c  euclid_format.c  euclid_unformat.c  fast4-g.1  fast4-g.c  g-acad.1  g-acad.c  g-dxf.1  g-dxf.c  g-euclid.1  g-euclid.c  g-euclid1.c  g-nff.1  g-nff.c  g-nmg.1  g-nmg.c  g-shell.rect.1  g-shell.rect.c  (+38 more)
db/: .gitignore  1647260.dsp  CMakeLists.txt  Cakefile  Makefile  Makefile.am  Makefile.dist  aet.asc  aet.g  aet.rt  annual_gift_man.asc  arb8_showcase.asc  axis.asc  axis.g  bearing.asc  bearing.g  bicycle_wheel.asc  bldg391.asc  bldg391.g  bmpa.asc  boolean-ops.asc  boolean-ops.g  bug-ryan.asc  castle.asc  castle.g  checkers.asc  conv_run.cmake.in  cornell-kunigami.asc  cornell-kunigami.g  cornell.asc  cornell.g  cornell.rt  cray.asc  cray.g  crod.asc  crod.g  cube.asc  cube.g  cube.rt  db.php  (+76 more)
doc/: .gitignore  4.4-bugs.doc  BRL-CAD.bib  CMakeLists.txt  Cakefile  GITHUB  IDEAS  Makefile.am  PROJECTS  README.AIX  README.BSD  README.IRIX  README.Linux  README.MacOSX  README.OSCON-2014  README.Solaris  README.VAX  README.Windows  README.adoc  STARTERS  STRATEGY  TODO.BREP  X.doc  agreement  agreement.rtf  agreement_R6.0.rtf  anim.doc  anim.txt  archer_ack.txt  benchmark.doc  benchmark.tr  bison_to_lemon.txt  blurb100.doc  brep.txt  bsd_semaphore_bug.txt  bu_opt_design_notes.txt  bw.5  checklist.txt  cmake.txt  cmake_vars.txt  (+67 more)
fb/: Cakefile  Makefile.am  bw-fb.1  bw-fb.c  cat-fb.1  cat-fb.c  cell-fb.1  cell-fb.c  cmap-crunch.c  cmap-fb.1  cmap-fb.c  fb-bw.1  fb-bw.c  fb-cmap.1  fb-cmap.c  fb-fb.1  fb-fb.c  fb-orle.1  fb-orle.c  fb-pix.1  fb-pix.c  fb-png.1  fb-png.c  fb-rle.1  fb-rle.c  fbanim.1  fbanim.c  fbcbars.1  fbcbars.c  fbclear.1  fbclear.c  fbcmap.1  fbcmap.c  fbcmrot.1  fbcmrot.c  fbcolor.1  fbcolor.c  fbfade.1  fbfade.c  fbframe.1  (+44 more)
fbed/: Cakefile  Makefile.am  Makefile.loc  ascii.h  char.c  cursorbits.h  empty.c  execshell.c  extern.h  fb_ik.h  fbed.1  fbed.c  fill_buf.c  font.doc  font.h  getfont.c  getinput.c  glob.c  loadfont.c  popup.h  pos_pad.c  prnt.c  sgi_dep.c  squash.c  std.h  try.c  try.h
fbserv/: Cakefile  Makefile.am  fbserv.1  fbserv.c
gtools/: Cakefile  Makefile.am  g_diff.1  g_diff.c  g_lint.1  g_lint.c  solshoot.c  testfree.c
h/: Cakefile  Makefile.am  RtServerImpl.h  XtndRunsv.h  anim.h  bn.h  bu.h  cmd.h  compat4.h  conf.h  db.h  db5.h  dm-Null.h  dm-X.h  dm-glx.h  dm-ogl.h  dm-pex.h  dm-plot.h  dm-ps.h  dm.h  dm_color.h  dm_xvars.h  externs.h  fb.h  fbserv_obj.h  itcl.h  itclDecls.h  itclInt.h  itclIntDecls.h  itk.h  itkDecls.h  light.h  machine.h  mater.h  msr.h  nmg.h  noalias-prag.h  noalias.h  nurb.h  orle.h  (+46 more)
iges/: Cakefile  Makefile.am  add_face.c  add_inner_shell.c  add_loop.c  arrange.c  b-spline.c  block2.c  brep.c  brlabs.c  bubbleup.c  check_names.c  cone.c  conv_drawings.c  convassem.c  convinst.c  convsolids.c  convsurf.c  convtree.c  copytree.c  cyl.c  do_subfigs.c  docolor.c  ell.c  evalxform.c  extrudcirc.c  extrudcon.c  extrude.c  findp.c  freetree.c  g-iges.1  g-iges.c  ge6.igs  get_att.c  get_cnurb_curve.c  get_edge_list.c  get_iges_vertex.c  get_outer_shell.c  get_vertex.c  get_vertex_list.c  (+50 more)
include/: .gitignore  CMakeLists.txt  D.pm  Makefile.am  RTree.h  RtServerImpl.h  XtndRunsv.h  analyze.h  anim.h  bg.h  bgeom.h  bin.h  bio.h  bn.h  bnetwork.h  bot.h  brep.h  bresource.h  brlcad.h  brlcad.i  brlcad_config.h.cmake  brlcad_ident.h  brlcad_ident.h.in  brlcad_version.h  brlcad_version.h.in  brlregex.h  bselect.h  bsg.h  bsocket.h  bu.h  bv.h  bview.h  cmd.h  colorquant.h  common.h  compat4.h  conf.h  config_win.h  config_win.h.in  config_win_cmake.h  (+128 more)
irprep/: Cakefile  Compile.sgi  Makefile.am  all_sf.1  all_sf.c  display.1  display.c  firpass.1  firpass.c  ir-X.1  ir-X.c  ir-sgi.1  ir-sgi.c  irdisp.1  irdisp.c  pictsgi.1  pictsgi.c  pictx.1  pictx.c  secpass.1  secpass.c  see.1  see.c  see2.1  see2.c  shapefact.1  shapefact.c  subroutines.c
iwidgets4.0.1/: Cakefile  ChangeLog  Makefile.am  Makefile.in  aclocal.m4  configure  configure.in
jove/: Cakefile  Makefile  Makefile.am  findcom.c  jove.h  jove_buf.c  jove_c.c  jove_delete.c  jove_disp.c  jove_draw.c  jove_extend.c  jove_funcs.c  jove_insert.c  jove_io.c  jove_main.c  jove_marks.c  jove_misc.c  jove_proc.c  jove_re.c  jove_screen.c  jove_temp.h  jove_term.c  jove_tune.c  jove_wind.c  mkversion.sh  teach-jove.sh  termcap.h
libdm/: Cakefile  Makefile.am  axes.c  clip.c  cmd.c  color.c  db_obj.c  dm-Null.c  dm-X.c  dm-generic.c  dm-glx.c  dm-ogl.c  dm-ogl_win32.c  dm-pex.c  dm-plot.c  dm-ps.c  dm_obj.c  fbserv_obj.c  fbserv_obj.h  geometry_obj.c  knob.c  libdm.dsp  libdm.dsw  libdm.ncb  libdm.opt  libdm.plg  options.c  (+4 more)
(+35604 files in other folders)
